--- a/.ivy/ivy-report/myid.utilities-MyidCredentialProvider-x32.html
+++ b/.ivy/ivy-report/myid.utilities-MyidCredentialProvider-x32.html
@@ -18,7 +18,7 @@
 </h1>
 <div id="date">
     resolved on 
-      2018-03-30 22:36:24</div>
+      2018-04-02 06:03:52</div>
 <ul id="confmenu">
 <li>
 <a class="active" href="myid.utilities-MyidCredentialProvider-x32.html">x32</a>
@@ -40,10 +40,10 @@
 <td class="title">Modules</td><td class="value">12</td>
 </tr>
 <tr>
-<td class="title">Revisions</td><td class="value">13  
+<td class="title">Revisions</td><td class="value">12  
             (0 searched <img src="http://ant.apache.org/ivy/images/searched.gif" alt="searched" title="module revisions which required a search with a dependency resolver to be resolved">,
             0 downloaded <img src="http://ant.apache.org/ivy/images/downloaded.gif" alt="downloaded" title="module revisions for which ivy file was downloaded by dependency resolver">,
-            1 evicted <img src="http://ant.apache.org/ivy/images/evicted.gif" alt="evicted" title="module revisions which were evicted by others">,
+            0 evicted <img src="http://ant.apache.org/ivy/images/evicted.gif" alt="evicted" title="module revisions which were evicted by others">,
             0 errors <img src="http://ant.apache.org/ivy/images/error.gif" alt="error" title="module revisions on which error occurred">)</td>
 </tr>
 <tr>
@@ -52,25 +52,10 @@
             0 failed)</td>
 </tr>
 <tr>
-<td class="title">Artifacts size</td><td class="value">764811 kB
+<td class="title">Artifacts size</td><td class="value">901252 kB
             (0 kB downloaded,
-            764811 kB in cache)</td>
+            901252 kB in cache)</td>
 </tr>
-</table>
-<h2>Conflicts</h2>
-<table class="conflicts">
-<thead>
-<tr>
-<th>Module</th><th>Selected</th><th>Evicted</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><a href="#myid.utilities-EdeficeCommon">EdeficeCommon
-             by
-             myid.utilities</a></td><td><a href="#myid.utilities-EdeficeCommon-200.0.0-dev1">200.0.0-dev1</a> </td><td><a href="#myid.utilities-EdeficeCommon-200.0.0-dev0">200.0.0-dev0 </a> </td>
-</tr>
-</tbody>
 </table>
 <h2>Dependencies Overview</h2>
 <table class="deps">
@@ -83,13 +68,13 @@
 <tr>
 <td><a href="#myid.utilities-CardLib"> CardLib
          by
-         myid.utilities</a></td><td><a href="#myid.utilities-CardLib-200.0.0-dev0">200.0.0-dev0</a></td><td align="center">integration</td><td align="center">development</td><td align="center">false</td><td align="center"></td><td align="center">25850 kB
+         myid.utilities</a></td><td><a href="#myid.utilities-CardLib-200.0.0-dev1">200.0.0-dev1</a></td><td align="center">integration</td><td align="center">development</td><td align="center">false</td><td align="center"></td><td align="center">49798 kB
     </td><td align="center"></td>
 </tr>
 <tr>
 <td><a href="#myid.utilities-SoftCrypto">--- SoftCrypto
          by
-         myid.utilities</a></td><td><a href="#myid.utilities-SoftCrypto-200.0.0-dev0">200.0.0-dev0</a></td><td align="center">integration</td><td align="center">development</td><td align="center">false</td><td align="center"></td><td align="center">106460 kB
+         myid.utilities</a></td><td><a href="#myid.utilities-SoftCrypto-200.0.0-dev1">200.0.0-dev1</a></td><td align="center">integration</td><td align="center">development</td><td align="center">false</td><td align="center"></td><td align="center">218953 kB
     </td><td align="center"></td>
 </tr>
 <tr>
@@ -139,12 +124,6 @@
          by
          3rdparty</a></td><td><a href="#3rdparty-MSXML-6.0-20150105153359">6.0-20150105153359</a></td><td align="center">release</td><td align="center">release</td><td align="center">false</td><td align="center"></td><td align="center">2424 kB
     </td><td align="center"></td>
-</tr>
-<tr>
-<td><a href="#myid.utilities-EdeficeCommon">------ EdeficeCommon
-         by
-         myid.utilities</a></td><td><a href="#myid.utilities-EdeficeCommon-200.0.0-dev0">200.0.0-dev0</a></td><td align="center"></td><td align="center"></td><td align="center"></td><td align="center"></td><td align="center">0 kB
-    </td><td align="center"><img src="http://ant.apache.org/ivy/images/evicted.gif" alt="evicted" title="evicted by 200.0.0-dev1"></td>
 </tr>
 <tr>
 <td><a href="#3rdparty-CNG">------ CNG
@@ -254,15 +233,15 @@
 <h3>
 <a name="myid.utilities-CardLib"></a>CardLib by myid.utilities</h3>
 <h4>
-<a name="myid.utilities-CardLib-200.0.0-dev0"></a>
-           Revision: 200.0.0-dev0<span style="padding-left:15px;"></span>
+<a name="myid.utilities-CardLib-200.0.0-dev1"></a>
+           Revision: 200.0.0-dev1<span style="padding-left:15px;"></span>
 </h4>
 <table class="header">
 <tr>
 <td class="title">Status</td><td class="value">integration</td>
 </tr>
 <tr>
-<td class="title">Publication</td><td class="value">20180330223553</td>
+<td class="title">Publication</td><td class="value">20180402055416</td>
 </tr>
 <tr>
 <td class="title">Resolver</td><td class="value">development</td>
@@ -271,9 +250,9 @@
 <td class="title">Configurations</td><td class="value">include, vc15, vc10</td>
 </tr>
 <tr>
-<td class="title">Artifacts size</td><td class="value">25850 kB
+<td class="title">Artifacts size</td><td class="value">49798 kB
             (0 kB downloaded,
-            25850 kB in cache)</td>
+            49798 kB in cache)</td>
 </tr>
 </table>
 <h5>Required by</h5>
@@ -300,7 +279,7 @@
 <tr>
 <td><a href="#myid.utilities-SoftCrypto"> SoftCrypto
          by
-         myid.utilities</a></td><td><a href="#myid.utilities-SoftCrypto-200.0.0-dev0">200.0.0-dev0</a></td><td align="center">integration</td><td align="center">development</td><td align="center">false</td><td align="center"></td><td align="center">106460 kB
+         myid.utilities</a></td><td><a href="#myid.utilities-SoftCrypto-200.0.0-dev1">200.0.0-dev1</a></td><td align="center">integration</td><td align="center">development</td><td align="center">false</td><td align="center"></td><td align="center">218953 kB
     </td><td align="center"></td>
 </tr>
 <tr>
@@ -352,12 +331,6 @@
     </td><td align="center"></td>
 </tr>
 <tr>
-<td><a href="#myid.utilities-EdeficeCommon">--- EdeficeCommon
-         by
-         myid.utilities</a></td><td><a href="#myid.utilities-EdeficeCommon-200.0.0-dev0">200.0.0-dev0</a></td><td align="center"></td><td align="center"></td><td align="center"></td><td align="center"></td><td align="center">0 kB
-    </td><td align="center"><img src="http://ant.apache.org/ivy/images/evicted.gif" alt="evicted" title="evicted by 200.0.0-dev1"></td>
-</tr>
-<tr>
 <td><a href="#3rdparty-CNG">--- CNG
          by
          3rdparty</a></td><td><a href="#3rdparty-CNG-8.1.1">8.1.1</a></td><td align="center">integration</td><td align="center">snapshot</td><td align="center">false</td><td align="center"></td><td align="center">55 kB
@@ -374,46 +347,46 @@
 </thead>
 <tbody>
 <tr>
-<td>CardLib_win32_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">10657 kB</td>
-</tr>
-<tr>
-<td>CardLib_win64_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
-</tr>
-<tr>
-<td>CardLib_win32_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">3095 kB</td>
-</tr>
-<tr>
-<td>CardLib_include</td><td>include</td><td>zip</td><td align="center">no</td><td align="center">22 kB</td>
-</tr>
-<tr>
 <td>CardLib_win64_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">12075 kB</td>
 </tr>
 <tr>
-<td>CardLib_win64_veracode_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
+<td>CardLib_win64_veracode_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">2866 kB</td>
 </tr>
 <tr>
-<td>CardLib_win32_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
+<td>CardLib_win32_veracode_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">2423 kB</td>
+</tr>
+<tr>
+<td>CardLib_win32_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">8709 kB</td>
+</tr>
+<tr>
+<td>CardLib_win32_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">10657 kB</td>
 </tr>
 <tr>
 <td>CardLib_win64_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
 </tr>
 <tr>
-<td>CardLib_win32_veracode_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
+<td>CardLib_win64_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">9950 kB</td>
+</tr>
+<tr>
+<td>CardLib_include</td><td>include</td><td>zip</td><td align="center">no</td><td align="center">22 kB</td>
+</tr>
+<tr>
+<td>CardLib_win32_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">3095 kB</td>
 </tr>
 </tbody>
 </table>
 <h3>
 <a name="myid.utilities-SoftCrypto"></a>SoftCrypto by myid.utilities</h3>
 <h4>
-<a name="myid.utilities-SoftCrypto-200.0.0-dev0"></a>
-           Revision: 200.0.0-dev0<span style="padding-left:15px;"></span>
+<a name="myid.utilities-SoftCrypto-200.0.0-dev1"></a>
+           Revision: 200.0.0-dev1<span style="padding-left:15px;"></span>
 </h4>
 <table class="header">
 <tr>
 <td class="title">Status</td><td class="value">integration</td>
 </tr>
 <tr>
-<td class="title">Publication</td><td class="value">20180330064808</td>
+<td class="title">Publication</td><td class="value">20180402054637</td>
 </tr>
 <tr>
 <td class="title">Resolver</td><td class="value">development</td>
@@ -422,9 +395,9 @@
 <td class="title">Configurations</td><td class="value">include, vc15, vc10</td>
 </tr>
 <tr>
-<td class="title">Artifacts size</td><td class="value">106460 kB
+<td class="title">Artifacts size</td><td class="value">218953 kB
             (0 kB downloaded,
-            106460 kB in cache)</td>
+            218953 kB in cache)</td>
 </tr>
 </table>
 <h5>Required by</h5>
@@ -436,7 +409,7 @@
 </thead>
 <tbody>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-CardLib">CardLib</a></td><td>200.0.0-dev0</td><td>vc15, vc10</td><td>200.0.0-dev0</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-CardLib">CardLib</a></td><td>200.0.0-dev1</td><td>vc15, vc10</td><td>200.0.0-dev1</td>
 </tr>
 </tbody>
 </table>
@@ -497,12 +470,6 @@
     </td><td align="center"></td>
 </tr>
 <tr>
-<td><a href="#myid.utilities-EdeficeCommon"> EdeficeCommon
-         by
-         myid.utilities</a></td><td><a href="#myid.utilities-EdeficeCommon-200.0.0-dev0">200.0.0-dev0</a></td><td align="center"></td><td align="center"></td><td align="center"></td><td align="center"></td><td align="center">0 kB
-    </td><td align="center"><img src="http://ant.apache.org/ivy/images/evicted.gif" alt="evicted" title="evicted by 200.0.0-dev1"></td>
-</tr>
-<tr>
 <td><a href="#3rdparty-CNG"> CNG
          by
          3rdparty</a></td><td><a href="#3rdparty-CNG-8.1.1">8.1.1</a></td><td align="center">integration</td><td align="center">snapshot</td><td align="center">false</td><td align="center"></td><td align="center">55 kB
@@ -522,25 +489,25 @@
 <td>SoftCrypto_win64_veracode_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">13158 kB</td>
 </tr>
 <tr>
-<td>SoftCrypto_win64_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
-</tr>
-<tr>
 <td>SoftCrypto_win64_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">45196 kB</td>
 </tr>
 <tr>
-<td>SoftCrypto_win32_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
+<td>SoftCrypto_win32_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">11889 kB</td>
+</tr>
+<tr>
+<td>SoftCrypto_win32_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">38847 kB</td>
 </tr>
 <tr>
 <td>SoftCrypto_include</td><td>include</td><td>zip</td><td align="center">no</td><td align="center">100 kB</td>
 </tr>
 <tr>
-<td>SoftCrypto_win32_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
+<td>SoftCrypto_win64_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">14797 kB</td>
 </tr>
 <tr>
 <td>SoftCrypto_win32_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">37623 kB</td>
 </tr>
 <tr>
-<td>SoftCrypto_win64_veracode_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">0 kB</td>
+<td>SoftCrypto_win64_vc15</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">46960 kB</td>
 </tr>
 <tr>
 <td>SoftCrypto_win32_veracode_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">10383 kB</td>
@@ -581,10 +548,10 @@
 </thead>
 <tbody>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-MyidCredentialProvider">MyidCredentialProvider</a></td><td>working@GBWKS2058</td><td>x32</td><td>200.+</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-SoftCrypto">SoftCrypto</a></td><td>200.0.0-dev1</td><td>include, vc15, vc10</td><td>200.0.0-dev1</td>
 </tr>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-SoftCrypto">SoftCrypto</a></td><td>200.0.0-dev0</td><td>vc15, vc10</td><td>200.0.0-dev0</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-MyidCredentialProvider">MyidCredentialProvider</a></td><td>working@GBWKS2058</td><td>x32</td><td>200.+</td>
 </tr>
 </tbody>
 </table>
@@ -674,47 +641,6 @@
 </tr>
 <tr>
 <td>EdeficeCommon_win64_vc10</td><td>lib</td><td>zip</td><td align="center">no</td><td align="center">56365 kB</td>
-</tr>
-</tbody>
-</table>
-<h4>
-<a name="myid.utilities-EdeficeCommon-200.0.0-dev0"></a>
-           Revision: 200.0.0-dev0<span style="padding-left:15px;"><img src="http://ant.apache.org/ivy/images/evicted.gif" alt="evicted" title="evicted by 200.0.0-dev1"></span>
-</h4>
-<table class="header">
-<tr>
-<td class="title">Status</td><td class="value"></td>
-</tr>
-<tr>
-<td class="title">Publication</td><td class="value"></td>
-</tr>
-<tr>
-<td class="title">Resolver</td><td class="value"></td>
-</tr>
-<tr>
-<td class="title">Configurations</td><td class="value">include, vc15, vc10</td>
-</tr>
-<tr>
-<td class="title">Artifacts size</td><td class="value">0 kB
-            (0 kB downloaded,
-            0 kB in cache)</td>
-</tr>
-<tr>
-<td class="title">Evicted by</td><td class="value"><b>200.0.0-dev1 </b> <b></b>
-			 in <b>latest-revision</b> conflict manager
-        </td>
-</tr>
-</table>
-<h5>Required by</h5>
-<table>
-<thead>
-<tr>
-<th>Organisation</th><th>Name</th><th>Revision</th><th>In Configurations</th><th>Asked Revision</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-SoftCrypto">SoftCrypto</a></td><td>200.0.0-dev0</td><td>vc15, vc10</td><td>200.0.0-dev0</td>
 </tr>
 </tbody>
 </table>
@@ -828,10 +754,10 @@
 <td>myid.utilities</td><td><a href="#myid.utilities-EdeficeCommon">EdeficeCommon</a></td><td>200.0.0-dev1</td><td>include, vc15, vc10</td><td>1.20</td>
 </tr>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-MyidCredentialProvider">MyidCredentialProvider</a></td><td>working@GBWKS2058</td><td>x32</td><td>1.+</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-eTypeLib">eTypeLib</a></td><td>200.0.0-dev1</td><td>include, vc15, vc10</td><td>1.20</td>
 </tr>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-eTypeLib">eTypeLib</a></td><td>200.0.0-dev1</td><td>include, vc15, vc10</td><td>1.20</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-MyidCredentialProvider">MyidCredentialProvider</a></td><td>working@GBWKS2058</td><td>x32</td><td>1.+</td>
 </tr>
 </tbody>
 </table>
@@ -890,10 +816,10 @@
 </thead>
 <tbody>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-MyidCredentialProvider">MyidCredentialProvider</a></td><td>working@GBWKS2058</td><td>x32</td><td>8.1.1+</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-SoftCrypto">SoftCrypto</a></td><td>200.0.0-dev1</td><td>include, vc15, vc10</td><td>8.1.1</td>
 </tr>
 <tr>
-<td>myid.utilities</td><td><a href="#myid.utilities-SoftCrypto">SoftCrypto</a></td><td>200.0.0-dev0</td><td>include, vc15, vc10</td><td>8.1.1</td>
+<td>myid.utilities</td><td><a href="#myid.utilities-MyidCredentialProvider">MyidCredentialProvider</a></td><td>working@GBWKS2058</td><td>x32</td><td>8.1.1+</td>
 </tr>
 </tbody>
 </table>
